# cjrh.github.io

./: .gitignore  CNAME  LICENSE  README.md  archive.html  base.css  config.rb  generate_syntax_css.sh  index.html  justfile  pyproject.toml  requirements.in  requirements.txt  robots.txt  rss.xml  run.sh  sitemap.xml
.github/: dependabot.yml
2012/: index.html
2013/: index.html
categories/: index.html
galleries/: index.html  rss.xml
listings/: index.html
notebooks/: A Windows setup for Python development.ipynb  Another pointless comparison of Rust and C++ binary size.ipynb  Backpack for learning Rust.ipynb  Calling D (dlang) shared libs from Python on Windows.ipynb  Compiling Python extension modules on Windows.ipynb  Consecutive Groups.ipynb  First post.ipynb  Fixing missing Document Properties dialog in Inkscape on Mac OS X.ipynb  Keynode code snippets from vim.ipynb  Koyeb Cloud Platform.ipynb  Luxurious-git-branch-switch-with-fzf.ipynb  Making binaries with Python.ipynb  Managing the huggingface cache.ipynb  Python Multiple Inhertance and the MRO.ipynb  Python Packaging Problems.ipynb  Python Syntax Efficiency.ipynb  Python without virtualenv.ipynb  Setting up Compass, Sass and Django.ipynb  So you want to make a screencast.ipynb  The combination of  OS X zsh vim anaconda.ipynb  Understanding-monads.ipynb
posts/: A Windows setup for Python development.html  A Windows setup for Python development.json  Another pointless comparison of Rust and C++ binary size.html  Another pointless comparison of Rust and C++ binary size.json  Backpack for learning Rust.html  (+54 more)
(+25 files in other folders)
